fixes elements alignment issue

--- a/styles/gh-fork-ribbon.css
+++ b/styles/gh-fork-ribbon.css
@@ -53,7 +53,7 @@
 
   /* Add "stitching" effect */
   border-width: 1px 0;
-  border-style: dotted;
+  border-style: groove;
   border-color: #fff;
   border-color: rgba(255, 255, 255, 0.7);
 }
@@ -84,5 +84,5 @@
 }
 
 .right .github-fork-ribbon {
-  background-color: #333;
+  background-color: #502f6f;
 }
